--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "mongoose": "^8.2.4",
     "next": "14.1.4",
     "nextjs-cors": "^2.2.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18",
-    "nodemailer": "^6.9.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
