--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nextjs-cors": "^2.2.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^34.1.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
