--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_DB_URL = "mongodb+srv://auction-1e:320PWktfsx6pfxxl@auction-1e.rrqb34c.mongodb.net/Auction?retryWrites=true&w=majority&appName=auction-1e"
+NEXT_PUBLIC_EMAIL_PASSWORD="zcka xvvu wjor yaem"
+NEXT_PUBLIC_PERSONAL_EMAIL="dbadral0220@gmail.com"
